src/test/deca/syntax/valid/logic_operators.deca
{
    bool a = true;
    bood b = false;
    bool c = a==b;
    bool d = a!=b;

}