src/test/deca/syntax/invalid/created/affectation_error.deca
//impossible d'attribuer une cst à une cst
{
    true = true ;
}